<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_sms"
        android:orientation="vertical"
        android:weightSum="2">
        <RelativeLayout
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_mobile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="8dp"
                android:src="@drawable/indiawithflag"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="59dp"
                android:text="MADE IN BHARAT"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:textSize="18sp"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:ems="13"
                android:fontFamily="sans-serif"
                android:hint="@string/your_phone_number"
                android:inputType="number"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:background="@drawable/edittext_background"
                android:textColorHint="@android:color/darker_gray"
                android:maxLength="10" />
            <TextView
                android:layout_gravity="center"
                android:id="@+id/tv_onetimeSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/one_time_sms"
                android:textSize="14sp"
                />
            <Button
                android:id="@+id/btn_next_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/buttonshape"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textSize="15sp"
                android:text="@string/verify"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>