<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtp">

    <RelativeLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape">
        <TextView
            android:id="@+id/tv_verifyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="78dp"
            android:text="@string/verify_title"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tv_verifyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="146dp"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/verify_otp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="164dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            tools:ignore="RtlCompat">
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            tools:ignore="RtlCompat">
        </android.support.design.widget.TextInputLayout>
        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cursorWidth="2dp"
            app:itemCount="4"
            app:itemHeight="48dp"
            app:itemRadius="4dp"
            app:itemSpacing="8dp"
            app:itemWidth="48dp"
            app:lineWidth="2dp"
            app:viewType="rectangle"/>
        <requestFocus />
        <Button
            android:id="@+id/btn_next_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="38dp"
            android:background="@drawable/buttonshapewhite"
            android:textColor="#4caf50"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/verify"
            />

    </RelativeLayout>

</LinearLayout>